--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
-    <p>A new line in our file!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, labore!!</p>
+    <!--changes for emergency-fix-->
 
 </body>
 
