--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div><img src="p2.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
     <p>This is the first file in my new Git Repo.</p>
     <p>A new line in our file!</p>
+    <div><img src="web5.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
 
