updated index.html with new para and ul

--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
     <!--changes for emergency-fix-->
     <div><img src="web5.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
+    <!--git push example-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, consequuntur. Expedita blanditiis dolore
+        omnis, exercitationem in repellendus illo, accusantium delectus nisi voluptatibus hic at laboriosam numquam
+        debitis enim suscipit quibusdam molestiae ipsa, assumenda iusto optio sint eius aspernatur. Fuga quam doloribus
+        recusandae adipisci in illo numquam hic dignissimos? Asperiores inventore a recusandae quibusdam neque
+        temporibus amet enim alias, vitae autem doloremque eveniet expedita vel voluptatem obcaecati in officia
+        voluptates repudiandae dolorum quasi dolores rem unde! Odio veritatis dolores quas tempore, non quaerat,
+        incidunt recusandae necessitatibus cum atque illum sequi velit, vel dolorum magnam. Sed distinctio officia eaque
+        cupiditate, voluptatem enim.</p>
+    <ul>
+        <li>Home</li>
+        <li>Contact</li>
+    </ul>
+
 
 </body>
 
