--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <li>Home</li>
         <li>Contact</li>
     </ul>
+    <p>Hello shrinuja how are you</p>
+    <footer>My comany.in</footer>
 
 
 </body>
